MOW-1597 fix ui issue with scrollbar

--- a/web/src/main/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/scss/dialog-styles.scss
@@ -1454,6 +1454,10 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 
 			&.withBorder {
 				border-bottom: 1px solid colors.$black-12;
+
+				.templatesPanel {
+					padding-right: 9px;
+				}
 			}
 		}
 
